Added features like the refresh pull down screen, and published multiple tweets

--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -1,11 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Skf-wc-hjs">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="f3g-PU-F7Q">
+            <objects>
+                <viewController id="Skf-wc-hjs" customClass="LoginViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xMG-kf-BwI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaY-G8-lEi">
+                                <rect key="frame" x="97" y="306.5" width="181" height="54"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="BWI-71-jNQ"/>
+                                    <constraint firstAttribute="width" constant="181" id="g6K-m5-43L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="onLoginButton:" destination="Skf-wc-hjs" eventType="touchUpInside" id="B4O-ez-squ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="eaY-G8-lEi" firstAttribute="centerY" secondItem="xMG-kf-BwI" secondAttribute="centerY" id="3Cy-ow-AWb"/>
+                            <constraint firstItem="eaY-G8-lEi" firstAttribute="centerX" secondItem="xMG-kf-BwI" secondAttribute="centerX" id="wq8-YW-DRV"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xXE-bb-303"/>
+                    </view>
+                    <connections>
+                        <segue destination="Ts1-FU-RbF" kind="presentation" identifier="loginToHome" id="4e1-Y0-pvz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Geh-K3-L9h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="45.600000000000001" y="188.45577211394306"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="2Ih-RJ-uBy">
+            <objects>
+                <tableViewController id="lGH-no-VON" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="frV-pT-KUp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="Kpo-Zi-Vbe" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kpo-Zi-Vbe" id="hif-CC-WMG">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vWw-c7-nkD">
+                                            <rect key="frame" x="16" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="Oky-re-EBF"/>
+                                                <constraint firstAttribute="height" constant="65" id="v4m-29-YWa"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRT-bX-Z1x">
+                                            <rect key="frame" x="89" y="11" width="82" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="82" id="bvz-a0-VgX"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZUf-Mg-d9b">
+                                            <rect key="frame" x="89" y="33" width="270" height="76"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="vWw-c7-nkD" firstAttribute="top" secondItem="hif-CC-WMG" secondAttribute="topMargin" id="5hT-12-zf9"/>
+                                        <constraint firstItem="vWw-c7-nkD" firstAttribute="leading" secondItem="hif-CC-WMG" secondAttribute="leadingMargin" id="6Cb-oO-1CT"/>
+                                        <constraint firstItem="ZUf-Mg-d9b" firstAttribute="bottom" secondItem="hif-CC-WMG" secondAttribute="bottomMargin" id="Q4y-zE-4Vx"/>
+                                        <constraint firstItem="PRT-bX-Z1x" firstAttribute="top" secondItem="hif-CC-WMG" secondAttribute="topMargin" id="eTD-Tp-bfD"/>
+                                        <constraint firstItem="PRT-bX-Z1x" firstAttribute="leading" secondItem="vWw-c7-nkD" secondAttribute="trailing" constant="8" id="eox-3S-N9g"/>
+                                        <constraint firstItem="ZUf-Mg-d9b" firstAttribute="trailing" secondItem="hif-CC-WMG" secondAttribute="trailingMargin" id="gC1-b1-8bb"/>
+                                        <constraint firstItem="ZUf-Mg-d9b" firstAttribute="leading" secondItem="vWw-c7-nkD" secondAttribute="trailing" constant="8" id="k7M-lY-FUb"/>
+                                        <constraint firstItem="ZUf-Mg-d9b" firstAttribute="top" secondItem="PRT-bX-Z1x" secondAttribute="bottom" constant="4" id="ujJ-vM-DT4"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="vWw-c7-nkD" id="tsE-AC-MIl"/>
+                                    <outlet property="tweetContent" destination="ZUf-Mg-d9b" id="jiz-Pz-mYu"/>
+                                    <outlet property="userNameLabel" destination="PRT-bX-Z1x" id="JNC-1z-CVb"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="lGH-no-VON" id="GtB-75-h3h"/>
+                            <outlet property="delegate" destination="lGH-no-VON" id="E4s-HX-Nd9"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Home" id="lHh-gb-tfh">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="eLY-kZ-6ei">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onLogOut:" destination="lGH-no-VON" id="ty5-Sw-uKp"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rr3-WL-zfn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1972" y="187.55622188905548"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ED8-94-ID5">
+            <objects>
+                <navigationController id="Ts1-FU-RbF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Plv-D8-dMn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="lGH-no-VON" kind="relationship" relationship="rootViewController" id="vyb-EO-4yj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6KC-dA-k1f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1022" y="188"/>
+        </scene>
+    </scenes>
 </document>
